--- a/style.css
+++ b/style.css
@@ -3,20 +3,32 @@
     padding: 0;
 }
 
-main{
+.main{
     background-image: url('assets/img/bg.jpg');
+    background-position: center center ;
+    background-size: max(1200px,100vw);
+    background-repeat: no-repeat;
     height: 80vh;
+    position: relative;
 }
 
-main .box{
+.main .box{
     height: 80vh;
     width: 100%;
     opacity: 0.44;
     background-color: black;
     z-index: 2;
+    position:absolute;
+    top:0;
 
 }
-
-.nav{
-    background: transparent ;
+nav{
+    background-color: red;
+    display: flex;
+    max-width: 80vw;
+    margin: auto;
+    justify-content: space-between;
+    align-items: center;
+    height: 62px;
 }
+
